[package]
name = "thorn-django"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Django linting plugin for Thorn — a fast pylint-django alternative in Rust"
authors = ["Bram"]

[dependencies]
thorn-api = { git = "https://github.com/pescheckit/thorn", path = "crates/thorn-api" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
toml = "0.8"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[dev-dependencies]
tempfile = "3"
