[package]
name = "thorn-django"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Django linting plugin for Thorn — a fast pylint-django alternative in Rust"
authors = ["Bram"]

[[bin]]
name = "thorn-django"
path = "src/bin/thorn.rs"

[dependencies]
thorn-api = { git = "https://github.com/pescheckit/thorn" }
thorn-cli = { git = "https://github.com/pescheckit/thorn" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6" }
toml = "0.8"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
colored = "2"

[dev-dependencies]
tempfile = "3"

# Use local checkout when available
[patch."https://github.com/pescheckit/thorn"]
thorn-api = { path = "../thorn/crates/thorn-api" }
thorn-cli = { path = "../thorn/crates/thorn-cli" }
