[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thorn-django"
version = "0.1.1"
description = "Django model graph extractor for thorn-django linter"
requires-python = ">=3.9"
dependencies = ["django>=3.2"]

[project.scripts]
thorn-django-extract = "thorn_django.__main__:main"
